[package]
name = "psyk"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
fnv = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
bincode = "*"

tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "*"

aphid = { git = "https://github.com/michaelshaw/aphid" }